--- a/language/de.xml
+++ b/language/de.xml
@@ -2,13 +2,15 @@
 <language xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/maelstrom/language.xsd" languagecode="de">
 	<category name="wcf.user">
 		<item name="wcf.user.twofa"><![CDATA[Zweifaktor-Authentifizierung]]></item>
+		<item name="wcf.user.twofa.description"><![CDATA[Die Zweifaktor-Authentifizierung hilft Ihnen Ihren Account zu schützen, indem Sie nach jedem Login nach einem einmaligen Code gefragt werden. Um die Zwei-Faktor-Authentifizierung nutzen zu können benötigen Sie den <a href="https://support.google.com/accounts/answer/1066447?hl=de">Google-Authenticator</a>.]]></item>
 		<item name="wcf.user.twofa.code"><![CDATA[Zweifaktor-Code]]></item>
 		<item name="wcf.user.twofa.code.error.notValid"><![CDATA[Der angegebene Code ist ungültig.]]></item>
 		<item name="wcf.user.twofa.code.error.used"><![CDATA[Der angegebene Code wurde bereits verwendet und kann aus Sicherheitsgründen nicht erneut verwendet werden. Warten Sie bitte bis ein neuer Code erzeugt wurde.]]></item>
-		<item name="wcf.user.twofa.code.description"><![CDATA[Geben Sie den Code der Ihnen angezeigt wird ein, um die Zweifaktor-Authentifizierungs-Einstellungen zu ändern.]]></item>
+		<item name="wcf.user.twofa.code.description"><![CDATA[Geben Sie den Code, der Ihnen angezeigt wird, ein, um die Zweifaktor-Authentifizierungs-Einstellungen zu ändern.]]></item>
 		<item name="wcf.user.twofa.required"><![CDATA[Zweifaktor-Code benötigt]]></item>
 		<item name="wcf.user.twofa.required.code.description"><![CDATA[]]></item>
 		<item name="wcf.user.twofa.secret"><![CDATA[Zweifaktor-Schlüssel]]></item>
+		<item name="wcf.user.twofa.secret.description"><![CDATA[Scannen Sie den angezeigten QR-Code, oder geben Sie den angezeigten Schlüssel in Ihrem Google Authenticator ein. Um die Zweifaktor-Authentifizierung zu aktivieren geben Sie nun noch den in der App angezeigten Code unterhalb ein.]]></item>
 		<item name="wcf.user.twofa.enable.success"><![CDATA[Die Zweifaktor-Authentifizierung wurde erfolgreich aktiviert.]]></item>
 		<item name="wcf.user.twofa.disable"><![CDATA[Zweifaktor-Authentifizierung deaktivieren]]></item>
 		<item name="wcf.user.twofa.disable.success"><![CDATA[Die Zweifaktor-Authentifizierung wurde erfolgreich deaktiviert.]]></item>
