Add emergency code feature
Closes #1

--- a/language/de.xml
+++ b/language/de.xml
@@ -7,11 +7,12 @@
 		<item name="wcf.user.twofa.code.error.notValid"><![CDATA[Der angegebene Code ist ungültig.]]></item>
 		<item name="wcf.user.twofa.code.error.used"><![CDATA[Der angegebene Code wurde bereits verwendet und kann aus Sicherheitsgründen nicht erneut verwendet werden. Warten Sie bitte bis ein neuer Code erzeugt wurde.]]></item>
 		<item name="wcf.user.twofa.code.description"><![CDATA[Geben Sie den Code, der Ihnen angezeigt wird, ein, um die Zweifaktor-Authentifizierungs-Einstellungen zu ändern.]]></item>
+		<item name="wcf.user.twofa.emergency.success"><![CDATA[Der Notfall-Code wurde erfolgreich verwendet und die Zweifaktor-Authentifizierung deaktiviert.]]></item>
 		<item name="wcf.user.twofa.required"><![CDATA[Ihr Account ist mit der Zweifaktor-Authentifizierung geschützt. Sie benötigen den aktuellen Code um fortzufahren.]]></item>
 		<item name="wcf.user.twofa.required.code.description"><![CDATA[Geben Sie den Code, der Ihnen in der App angezeigt wird, ein, um fortzufahren.]]></item>
 		<item name="wcf.user.twofa.secret"><![CDATA[Zweifaktor-Schlüssel]]></item>
 		<item name="wcf.user.twofa.secret.description"><![CDATA[Scannen Sie den angezeigten QR-Code, oder geben Sie den angezeigten Schlüssel in Ihrem Google Authenticator ein. Um die Zweifaktor-Authentifizierung zu aktivieren geben Sie nun noch den in der App angezeigten Code unterhalb ein.]]></item>
-		<item name="wcf.user.twofa.enable.success"><![CDATA[Die Zweifaktor-Authentifizierung wurde erfolgreich aktiviert.]]></item>
+		<item name="wcf.user.twofa.enable.success"><![CDATA[Die Zweifaktor-Authentifizierung wurde erfolgreich aktiviert. Ihr Notfall-Code ist: <code>{$twofaEmergency}</code>. Bewahren Sie diesen gut auf, er dient dazu den Zweifaktor-Login zu deaktivieren, falls Ihre App unbrauchbar werden sollte.]]></item>
 		<item name="wcf.user.twofa.disable"><![CDATA[Zweifaktor-Authentifizierung deaktivieren]]></item>
 		<item name="wcf.user.twofa.disable.success"><![CDATA[Die Zweifaktor-Authentifizierung wurde erfolgreich deaktiviert.]]></item>
 	</category>
