--- a/language/en.xml
+++ b/language/en.xml
@@ -16,4 +16,14 @@
 		<item name="wcf.user.twofa.disable"><![CDATA[Disable Two-Factor Authentication]]></item>
 		<item name="wcf.user.twofa.disable.success"><![CDATA[Two-Factor Authentication was successfully disabled.]]></item>
 	</category>
+	
+	<category name="wcf.acp.option">
+		<item name="wcf.acp.option.category.security.general.twofa"><![CDATA[Two-Factor Authentication]]></item>
+		<item name="wcf.acp.option.twofa_acp_only"><![CDATA[Administration only]]></item>
+		<item name="wcf.acp.option.twofa_acp_only.description"><![CDATA[Activates Two-Factor Authentication in Administration Control Panel only.]]></item>
+		<item name="wcf.acp.option.twofa_acp_require"><![CDATA[Require activation for Administators]]></item>
+		<item name="wcf.acp.option.twofa_acp_require.description"><![CDATA[Denies access to the Administration Control Panel if the account is not protected with Two-Factor Authentication.]]></item>
+		<item name="wcf.acp.option.twofa_reask_period"><![CDATA[Remember Period]]></item>
+		<item name="wcf.acp.option.twofa_reask_period.description"><![CDATA[Period, in which the user will not be asked again. [time in days]]]></item>
+	</category>
 </language>
